<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_makeDiet"
        android:icon="@drawable/makediet"
        android:title="@string/title_makeDiet" />

    <item
        android:id="@+id/navigation_dietCal"
        android:icon="@drawable/dietcal"
        android:title="@string/title_dietCal" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/crop"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/graph"
        android:title="@string/title_dashboard" />

</menu>